feature: delete library com.vdurmont:emoji-java, add FileUtils, IsDayOffService & TodayHolidaysService output was extended